<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Roomigo</string>
    <string name="app_id">349620835240734</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_on_board">OnBoardActivity</string>
    <string name="toast_error_request">Error Processing Request</string>
    <string name="toast_empty_fields">Please fill out all fields</string>
    <string name="toast_account_created">Account Created!</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="search_for_roommates">Search for Roommates</string>
    <string name="button_chats">Chats/Connections</string>
    <string name="action_bar_my_profile">My Profile</string>
    <string name="field_enter_location">Enter Location</string>
    <string name="title_where_looking">Where are you looking for roommates?</string>
    <string name="button_update_profile">Update Profile</string>
    <string name="hint_about_me">Max. 300 Characters</string>
    <string name="toast_valid_location">Please Select a Valid Location</string>
    <string name="toast_profile_updated">Profile Updated!</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_roommate_search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_messaging">MessagingActivity</string>
    <string name="toast_message_send_failed">Message failed to send.</string>
    <string name="message_hint">Message...</string>
    <string name="title_chats">Chats</string>
    <string name="message_new_connection">You have a new connection!</string>
    <string name="action_logout">Logout</string>
    <string name="button_sign_in_facebook">Sign in with Facebook</string>
    <string name="button_accept">ACCEPT</string>
    <string name="button_reject">REJECT</string>
    <string name="roomie_text_has_room">Has Room:\u0020</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="question_gender_pref">What are your gender Preferences?</string>
    <string name="choice_male">Male</string>
    <string name="choice_female">Female</string>
    <string name="choice_both">Both</string>
    <string name="question_have_room">Do you already have a room available?</string>
    <string name="choice_yes">Yes</string>
    <string name="choice_no">No</string>
    <string name="question_about_me">About Me</string>
    <string name="desc_save_profile">Save Profile Button</string>
    <string name="button_create_profile">CREATE PROFILE</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="deafult_user_string">User</string>
    <string name="desc_search_image">Search Image</string>
    <string name="desc_chat_image">Chat Image</string>
    <string name="button_cancel">CANCEL</string>
    <string name="roomie_looking_in">Looking In:\u0020</string>
    <string name="empty_roomie_string">There is currently no one looking for a roommate in your area.\nPlease click here to refresh.</string>
    <string name="empty_chat_list">You don\'t have any connections!\nUse the search feature to connect!</string>
    <string name="dialog_title_logout">Log Out</string>
    <string name="dialog_content_logout">Log out now?</string>
    <string name="dialog_positive_logout">Log Out</string>
    <string name="dialog_negative">Cancel</string>
    <string name="question_smoke">Do you smoke?</string>
    <string name="roomie_text_smokes">Smokes:\u0020</string>
    <string name="desc_profile_image">Profile Image</string>
    <string name="question_drink">Do you drink?</string>
    <string name="question_pet">Do you have a pet?</string>
    <string name="roomie_text_drinks">Drinks:\u0020</string>
    <string name="roomie_text_pets">Has Pets:\u0020</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_delete_connection">Delete Connection</string>
    <string name="dialog_title_delete_connection">Delete Connection</string>
    <string name="dialog_content_delete_connection">Delete this connection?</string>
    <string name="dialog_positive_delete_connection">Delete</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preference_discovery">Discovery Preference</string>
    <string name="preference_notification">Notification Preferences</string>
    <string name="choice_discovery">Discoverable</string>
    <string name="choice_general_updates">General Updates</string>
    <string name="choice_new_connections">New Connections</string>
    <string name="choice_new_messages">Messages</string>
    <string name="choice_privacy_policy">Privacy Policy</string>
    <string name="choice_terms">Terms of Use</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="action_save">Save</string>
    <string name="undiscoverable_text">You have Discovery set to off!\nTurn Discovery on in the Settings page to find new roommates!</string>
    <string name="action_refresh">Refresh</string>
    <string name="desc_prof_image_1">Profile Image 1</string>
    <string name="questions_prof_pic">Profile Pictures</string>
    <string name="button_cancel_uppercase">CANCEL</string>
    <string name="action_share">Share Roomigo</string>
    <string name="share_subject">Check out Roomigo!</string>
    <string name="share_text">Looking for a roommate? Roomigo helps you connect with others looking in your area! http://www.roomigo.co/</string>

    <string-array name="image_choices">
        <item>Select Image from Gallery</item>
        <item>Delete Image</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="desc_nav_icon">Navigation Icon</string>
    <string name="action_help">Help/Feedback</string>
    <string name="to">to</string>
    <string name="hint_price_max">Max</string>
    <string name="hint_price_min">Min</string>
    <string name="toast_max_less_than_min">Max is less than Min</string>
    <string name="roomie_price_range">Price Range(Monthly):</string>
    <string name="priceRangeText">Price Range(Monthly)</string>
    <string name="finding_matches">Finding Matches...</string>
    <string name="choice_legal">Legal</string>
    <string name="legal_libraries_header">Libraries</string>

    <!--Legal Strings and Liscences-->
    <string name="legal_butter_knife"><![CDATA[<b>Butter Knife</b> - © 2013 Jake Wharton]]></string>
    <string name="legal_simple_facebook"><![CDATA[<b>Simple Facebook</b> - © 2013-present Roman Kushnarenko]]></string>
    <string name="legal_circle_image"><![CDATA[<b>Circle Image View</b> - © 2014 Henning Dodenhof]]></string>
    <string name="legal_uil"><![CDATA[<b>Universal Image Loader</b> – © 2011–2015 Sergey Tarasevich]]></string>
    <string name="legal_retrolambda"><![CDATA[<b>Retrolambda</b> - © 2013 Evan Tatarka]]></string>
    <string name="legal_material_dialogs"><![CDATA[<b>Material Dialogs</b> - © 2015 Aidan Michael Follestad]]></string>
    <string name="legal_swipecards"><![CDATA[<b>Swipecards</b> - © 2014 Dionysis Lorentzos]]></string>
    <string name="legal_rx_android">RxAndroid</string>
    <string name="legal_facebook_sdk">Facebook Android SDK</string>

    <string name="facebook_liscense">Copyright © 2014-present, Facebook, Inc. All rights reserved.\n\n
        You are hereby granted a non-exclusive, worldwide, royalty-free
        license to use, copy, modify, and distribute this software in source code or binary form for
        use in connection with the web services and APIs provided by Facebook.\n\nAs with any software
        that integrates with the Facebook platform, your use of this software is subject to the
        Facebook Developer Principles and Policies [http://developers.facebook.com/policy/].
        This copyright notice shall be included in all copies or substantial portions of the
        software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
        INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR
        PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE
        FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
        ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="apache_liscence">Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License. You may obtain a copy of
        the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable
        law or agreed to in writing, software distributed under the License is distributed on an
        "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="mit_liscense">The MIT License (MIT)\n\nPermission is hereby granted, free of charge,
        to any person obtaining a copy of this software and associated documentation files
        (the "Software"), to deal in the Software without restriction, including without limitation
        the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies
        of the Software, and to permit persons to whom the Software is furnished to do so, subject
        to the following conditions:\n\nThe above copyright notice and this permission notice shall be
        included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS",
        WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
        OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
        THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
        WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
        WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="help_feedback">Help/Feedback</string>

</resources>
