<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        tools:context="com.richluick.android.roomie.ui.activities.EditProfileActivity">

        <TextView
            android:id="@+id/locationText"
            android:text="@string/title_where_looking"
            android:layout_alignParentTop="true"
            style="@style/Text.Small.EditProfile"/>

        <FrameLayout
            android:id="@+id/locationLayout"
            android:layout_below="@+id/locationText"
            style="@style/EditProfBoxStyle">

            <AutoCompleteTextView
                android:id="@+id/locationField"
                android:hint="@string/field_enter_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>

        <TextView
            android:id="@+id/genderText"
            android:text="@string/question_gender_pref"
            android:layout_below="@+id/locationLayout"
            style="@style/Text.Small.EditProfile" />

        <RelativeLayout
            android:id="@+id/genderLayout"
            android:layout_below="@+id/genderText"
            style="@style/EditProfBoxStyle">

            <TextView
                android:id="@+id/maleText"
                android:text="@string/choice_male"
                style="@style/Text.Medium.EditProfile"/>

            <TextView
                android:id="@+id/femaleText"
                android:text="@string/choice_female"
                android:layout_below="@+id/maleText"
                style="@style/Text.Medium.EditProfile" />

            <TextView
                android:id="@+id/bothText"
                android:text="@string/choice_both"
                android:layout_below="@+id/femaleText"
                style="@style/Text.Medium.EditProfile"/>

            <RadioGroup
                android:id="@+id/genderGroup"
                android:layout_alignTop="@id/maleText"
                android:layout_alignBottom="@id/bothText"
                style="@style/RadioGroupStyle">

                <RadioButton
                    android:id="@+id/maleCheckBox"
                    style="@android:style/Widget.CompoundButton.CheckBox"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"/>

                <RadioButton
                    android:id="@+id/femaleCheckBox"
                    style="@android:style/Widget.CompoundButton.CheckBox"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"/>

                <RadioButton
                    android:id="@+id/bothCheckBox"
                    style="@android:style/Widget.CompoundButton.CheckBox"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"/>
            </RadioGroup>
        </RelativeLayout>

        <TextView
            android:id="@+id/haveRoomText"
            android:text="@string/question_have_room"
            android:layout_below="@+id/genderLayout"
            style="@style/Text.Small.EditProfile" />

        <RelativeLayout
            android:id="@+id/haveRoomLayout"
            android:layout_below="@+id/haveRoomText"
            style="@style/EditProfBoxStyle">

            <TextView
                android:id="@+id/yesText"
                android:text="@string/choice_yes"
                style="@style/Text.Medium.EditProfile"/>

            <TextView
                android:id="@+id/noText"
                android:text="@string/choice_no"
                android:layout_below="@+id/yesText"
                style="@style/Text.Medium.EditProfile"/>

            <RadioGroup
                android:id="@+id/haveRoomGroup"
                android:layout_alignTop="@+id/yesText"
                android:layout_alignBottom="@id/noText"
                style="@style/RadioGroupStyle">

                <RadioButton
                    android:id="@+id/yesCheckBox"
                    style="@android:style/Widget.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <RadioButton
                    android:id="@+id/noCheckBox"
                    style="@android:style/Widget.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </RadioGroup>
        </RelativeLayout>

        <TextView
            android:id="@+id/smokeText"
            android:text="@string/question_smoke"
            android:layout_below="@+id/haveRoomLayout"
            style="@style/Text.Small.EditProfile" />

        <RelativeLayout
            android:id="@+id/smokeLayout"
            android:layout_below="@+id/smokeText"
            style="@style/EditProfBoxStyle">

            <TextView
                android:id="@+id/yesSmokeText"
                android:text="@string/choice_yes"
                style="@style/Text.Medium.EditProfile"/>

            <TextView
                android:id="@+id/noSmokeText"
                android:text="@string/choice_no"
                android:layout_below="@+id/yesSmokeText"
                style="@style/Text.Medium.EditProfile"/>

            <LinearLayout
                android:id="@+id/smokeGroup"
                android:layout_alignTop="@+id/yesSmokeText"
                android:layout_alignBottom="@id/noSmokeText"
                android:orientation="vertical"
                style="@style/RadioGroupStyle">

                <CheckBox
                    android:id="@+id/yesSmokeCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/noSmokeCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/drinkText"
            android:text="@string/question_drink"
            android:layout_below="@+id/smokeLayout"
            style="@style/Text.Small.EditProfile" />

        <RelativeLayout
            android:id="@+id/drinkLayout"
            android:layout_below="@+id/drinkText"
            style="@style/EditProfBoxStyle">

            <TextView
                android:id="@+id/yesDrinkText"
                android:text="@string/choice_yes"
                style="@style/Text.Medium.EditProfile"/>

            <TextView
                android:id="@+id/noDrinkText"
                android:text="@string/choice_no"
                android:layout_below="@+id/yesDrinkText"
                style="@style/Text.Medium.EditProfile"/>

            <LinearLayout
                android:id="@+id/drinkGroup"
                android:layout_alignTop="@+id/yesDrinkText"
                android:layout_alignBottom="@id/noDrinkText"
                android:orientation="vertical"
                style="@style/RadioGroupStyle">

                <CheckBox
                    android:id="@+id/yesDrinkCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/noDrinkCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/petText"
            android:text="@string/question_pet"
            android:layout_below="@+id/drinkLayout"
            style="@style/Text.Small.EditProfile" />

        <RelativeLayout
            android:id="@+id/petLayout"
            android:layout_below="@+id/petText"
            style="@style/EditProfBoxStyle">

            <TextView
                android:id="@+id/yesPetText"
                android:text="@string/choice_yes"
                style="@style/Text.Medium.EditProfile"/>

            <TextView
                android:id="@+id/noPetText"
                android:text="@string/choice_no"
                android:layout_below="@+id/yesPetText"
                style="@style/Text.Medium.EditProfile"/>

            <LinearLayout
                android:id="@+id/petGroup"
                android:layout_alignTop="@+id/yesPetText"
                android:layout_alignBottom="@id/noPetText"
                android:orientation="vertical"
                style="@style/RadioGroupStyle">

                <CheckBox
                    android:id="@+id/yesPetCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/noPetCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/aboutMeText"
            android:text="@string/question_about_me"
            android:layout_below="@+id/petLayout"
            style="@style/Text.Small.EditProfile"/>

        <EditText
            android:id="@+id/aboutMe"
            android:hint="@string/hint_about_me"
            android:maxLength="300"
            android:inputType="textMultiLine"
            android:lines="6"
            android:minLines="6"
            android:gravity="top|start"
            android:maxLines="6"
            android:scrollbars="vertical"
            android:layout_below="@+id/aboutMeText"
            style="@style/EditProfBoxStyle"/>

        <TextView
            android:id="@+id/profPicText"
            android:text="@string/questions_prof_pic"
            android:layout_below="@+id/aboutMe"
            style="@style/Text.Small.EditProfile"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_below="@id/profPicText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image1"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/desc_prof_image_1"
                    android:src="@drawable/ic_content_add"
                    app:border_width="1dp"
                    app:border_color="@color/primary"
                    android:layout_marginRight="@dimen/horizontal_mini_margin"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageCover1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/primary_light_transparent"
                    app:border_width="1dp"
                    app:border_color="@color/primary"
                    android:visibility="gone"
                    android:layout_marginRight="@dimen/horizontal_mini_margin"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image2"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/desc_prof_image_1"
                    android:src="@drawable/ic_content_add"
                    app:border_width="1dp"
                    app:border_color="@color/primary"
                    android:layout_marginRight="@dimen/horizontal_mini_margin"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageCover2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/primary_light_transparent"
                    app:border_width="1dp"
                    app:border_color="@color/primary"
                    android:visibility="gone"
                    android:layout_marginRight="@dimen/horizontal_mini_margin"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image3"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/desc_prof_image_1"
                    android:src="@drawable/ic_content_add"
                    app:border_width="1dp"
                    app:border_color="@color/primary"
                    android:layout_marginRight="@dimen/horizontal_mini_margin"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageCover3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/primary_light_transparent"
                    app:border_width="1dp"
                    app:border_color="@color/primary"
                    android:visibility="gone"
                    android:layout_marginRight="@dimen/horizontal_mini_margin"/>
            </FrameLayout>

           <!-- <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image4"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/desc_prof_image_1"
                    android:src="@drawable/ic_content_add"
                    app:border_width="1dp"
                    app:border_color="@color/primary"
                    android:layout_marginRight="@dimen/horizontal_mini_margin"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageCover4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/primary_light_transparent"
                    app:border_width="1dp"
                    app:border_color="@color/primary"
                    android:visibility="gone"
                    android:layout_marginRight="@dimen/horizontal_mini_margin"/>
            </FrameLayout>-->

            <com.richluick.android.roomie.ui.widgets.ClickableImageView
                android:id="@+id/image4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>


    </RelativeLayout>
</ScrollView>
